--- a/app/src/main/res/layout/center_fragment.xml
+++ b/app/src/main/res/layout/center_fragment.xml
@@ -27,6 +27,7 @@
                     android:layout_margin="3dp"
                     android:scaleType="centerCrop"
                     app:layout_collapseMode="parallax"
+                    android:src="@drawable/nav_icon"
                     />
                 <TextView
                     android:id="@+id/input_name"
