--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -4,13 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    app:cardCornerRadius="4dp">
+    android:layout_margin="10dp"
+    app:cardCornerRadius="4dp"
+    >
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
         <ImageView
             android:id="@+id/message_image"
@@ -31,7 +33,7 @@
                 android:layout_weight="1"
                 android:gravity="start"
                 android:layout_gravity="start"
-                android:textSize="18sp"
+                android:textSize="24sp"
                 android:text="Test Title"/>
             <TextView
                 android:id="@+id/message_time"
