--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -15,13 +15,14 @@
         android:text="Android平台下学生掌上软件测试课程作业系统"/>
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
         android:padding="8dp"
         android:text="@string/app_name"
-        android:textSize="48sp"/>
+        android:textSize="48sp" />
 
     <TextView
         android:layout_width="wrap_content"
